--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/poppins": "^4.5.0",
     "@prisma/client": "^3.6.0",
     "@types/bcrypt": "^5.0.0",
+    "animate.css": "^4.1.1",
     "bcrypt": "^5.0.1",
     "cookie": "^0.4.1",
     "cookies": "^0.8.0",
